--- a/package.json
+++ b/package.json
@@ -16,11 +16,13 @@
     "@babel/core": "^7.6.2",
     "@babel/plugin-transform-modules-commonjs": "^7.6.0",
     "babel-jest": "^26.6.1",
+    "babel-loader": "^8.2.2",
     "eslint": "^7.12.1",
     "gh-pages": "^3.1.0",
     "htmlhint": "^0.14.1",
     "jest": "^26.6.1",
     "opener": "^1.5.1",
-    "serve": "^11.0.0"
+    "serve": "^11.0.0",
+    "three": "^0.123.0"
   }
 }
